# mkmodels

./: .flake8  .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  Makefile  README.md  cookiecutter-config-file.yml  pyproject.toml
mlhub/: __init__.py  regularization.py
mlhub/knn/: knn_base.py  knn_classifier.py
mlhub/linear_m/: __init__.py  base_linear.py  linear.py  logistic.py
mlhub/metrics/: base_metric.py  classification_metrics.py  distance_metrics.py  regression_metrics.py
